minor-fixes
