# swagger_output.json
@@ -1,11 +1,11 @@
 {
   "swagger": "2.0",
   "info": {
-    "version": "1.0.0",
-    "title": "handwriter-backend",
-    "description": "Handwriter Application Backend Routes"
+    "version": "2.0.0",
+    "title": "Handwriter Express Application",
+    "description": "Handwriter Express Application Routes"
   },
-  "host": "https://handwritingbackend.herokuapp.com/",
+  "host": "https://handwritingbackend.herokuapp.com",
   "basePath": "/",
   "tags": [
     {
@@ -51,18 +51,6 @@
         "description": "",
         "parameters": [],
         "responses": {}
-      }
-    },
-    "/users/": {
-      "get": {
-        "tags": [],
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
       }
     },
     "/users/create": {
